# vigil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SOURCES.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  oss-hygiene.yml  publish.yml  release.yml
articles/: teammate-launch.md
catalogs/: iso-27001-annex-a.yaml
docs/: ADAPTER.md  ADOPT.md  AGENT.md  ARCHITECTURE.md  CHOOSING.md  COMPARISONS.md  CONFIDENCE.md  CONTRADICTION.md  CORPORATE.md  IMPACT.md  IMPORT.md  MCP-INTEGRATIONS.md  MEMORY-EXPORT.md  MEMORY-IMPORT.md  NAMING.md  OSS_HYGIENE.md  PHASE-B-OLLAMA.md  PROVIDERS.md  QUICKSTART.md  SCALE-AUTOMATION.md  SECURITY.md  SOCKET-MODE.md  VALIDATE.md
docs/series-7/: 01-local-first-brain.md  02-slack-socket-mode.md  03-importers-25k-docs.md  04-qdrant-and-chat-ui.md  05-mttd-similarity-search.md  06-war-rooms-auto-preloaded.md  07-lessons-retrospective.md  08-rename-and-cutover.md  09-build-to-be-turned-off.md  README.md
examples/: adapter-personal-overlay.toml  audit-log-sample.jsonl
examples/infra/aws-cloudtrail-hook/: README.md
examples/infra/aws-cloudtrail-hook/lambda/: handler.py  requirements.txt
examples/infra/aws-cloudtrail-hook/lambda/tests/: test_handler.py
examples/infra/aws-cloudtrail-hook/terraform/: main.tf  outputs.tf  variables.tf
examples/k8s/chat-api/: deployment.yaml
examples/k8s/event-listener/: deployment.yaml
examples/k8s/qdrant/: qdrant.yaml
examples/naming/: monorepo-only.toml  nexus-style.toml  small-team.toml  strict-iac.toml
hooks/: pre-push  pre-tool-use-guardrail.sh
skills/ask-vault/: SKILL.md
skills/init-teammate/: SKILL.md
skills/sync-vault/: SKILL.md
src/teammate/: __init__.py  adapter.py  brain.py  catalogs.py  cli.py  confidence.py  config.py  contradiction.py  impact.py  init.py  invalidations.py  mcp_server.py  naming.py  socket_listener.py  sync.py  validate.py  watch.py
src/teammate/chat_api/: __init__.py  main.py
src/teammate/importers/: __init__.py  base.py  confluence.py  github.py  jira.py  redact.py  slack.py
src/teammate/indexer/: __init__.py  main.py
src/teammate/mttd/: __init__.py  rule_layer.py
src/teammate/rag/: __init__.py  ask.py  ollama.py
src/teammate/war/: api.py
src/vigil/: __init__.py  adapter.py  adopt.py  brain.py  brain_pulse.py  cli.py  confidence.py  config.py  contradiction.py  impact.py  init.py  invalidations.py  mcp_server.py  memory_export.py  memory_import.py  naming.py  socket_listener.py  validate.py
src/vigil/agent/: __init__.py  _sync_common.py  _team_meta.py  auto_pr_drafter.py  base.py  confluence_sync.py  daily_digest.py  invalidation_digest.py  jira_sync.py  orphan_triage.py  pr_migration_plan.py  pr_review_assist.py  runner.py  slack_sync.py  targeted_radar.py  web_pull.py  weekly_digest.py
src/vigil/chat_api/: __init__.py  main.py
src/vigil/client_agent/: __init__.py  cli.py  hook.py
src/vigil/importers/: __init__.py  base.py  confluence.py  github.py  jira.py  slack.py
src/vigil/indexer/: __init__.py  main.py
src/vigil/mttd/: __init__.py  rule_layer.py  similarity_layer.py
src/vigil/providers/: __init__.py  base.py  ollama.py
src/vigil/rag/: __init__.py  ask.py  gbrain.py  index.py  ollama.py
src/vigil/war/: __init__.py  alert_bridge.py  api.py  participant_selector.py  postmortem.py  preload.py
templates/team-brain-skeleton/: .teammate-naming.toml  CLAUDE.md
templates/team-brain-skeleton/.claude/rules/: commit.md  test.md
templates/team-brain-skeleton/.claude/skills/example-skill/: SKILL.md
templates/team-brain-skeleton/.github/workflows/: brain-ci.yml
templates/team-brain-skeleton/docs/onboarding/: README.md
templates/team-brain-skeleton/docs/runbooks/: README.md
templates/team-brain-skeleton/hooks/: pre-push
templates/team-brain-skeleton/knowledge/: people.md  services.md
templates/team-brain-skeleton/knowledge/decisions/: 0001-use-team-brain.md
tests/: conftest.py  test_adapter.py  test_adopt.py  test_agent.py  test_ask_with_invalidations.py  test_auto_pr_drafter.py  test_brain.py  test_brain_pulse_cli.py  test_confidence_guards.py  test_config.py  test_contradiction.py  test_doctor.py  test_hooks.py  test_impact.py  test_index_versioning.py  test_init.py  test_invalidation_digest.py  test_invalidations_runtime.py  test_memory_export.py  test_memory_import.py  test_naming.py  test_pr_review_assist.py  test_providers.py  test_sync.py  test_sync_routines.py  test_targeted_radar.py  test_team_meta.py  test_validate.py
