[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "claude-teammate"
version = "0.1.0"
description = "Battle buddy for new SREs joining regulated teams: pluggable vault + local LLM + compliance scoring + production guardrails, in one Claude Code plugin."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "teammate authors" },
]
keywords = [
  "claude-code",
  "compliance",
  "iso-27001",
  "k-isms-p",
  "obsidian",
  "ollama",
  "rag",
  "site-reliability-engineering",
  "sre",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "reportlab>=4.0",
  "feedparser>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
sign = [
  "sigstore>=3.0",
  "cryptography>=42.0",
]
rag = [
  # Local LLM RAG layer. Ollama itself is installed separately (it's a binary).
  # These are minimal Python helpers; the real LLM call is via HTTP to localhost:11434.
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
all = [
  "claude-teammate[sign,rag,dev]",
]

[project.scripts]
teammate = "teammate.cli:main"

[project.urls]
Homepage = "https://github.com/placen-org/teammate"
Repository = "https://github.com/placen-org/teammate"
Issues = "https://github.com/placen-org/teammate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/teammate"]

[tool.hatch.build.targets.sdist]
include = [
  "src/teammate",
  "catalogs",
  "hooks",
  "skills",
  ".claude-plugin",
  "examples",
  "docs",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "SOURCES.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
