[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vigil"
version = "5.0.0"
description = "Vigil — a self-hosted DevSecOps command center. Reliability ops (SLA/SLO/SLI/MTTD/MTTR) over a git-backed team-brain corpus."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "vigil authors" },
]
keywords = [
  "claude-code",
  "team-knowledge",
  "rag",
  "ollama",
  "obsidian",
  "mcp",
  "local-first",
  "site-reliability-engineering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
rag = [
  # Local LLM RAG layer. Ollama itself is installed separately.
  "httpx>=0.27",
  "sqlite-vec>=0.1.6",
]
listen = [
  # Slack Socket Mode WebSocket + K8s Job creation for the event-listener Deployment.
  "slack-sdk>=3.27",
  "kubernetes>=29.0",
  "httpx>=0.27",
]
importers = [
  # Bulk corpus collection from GitHub / Jira / Slack / Confluence (v0.12).
  "httpx>=0.27",
  "slack-sdk>=3.27",
  "pyyaml>=6.0",
]
chat-api = [
  # FastAPI service for v1+ browser chat UI
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sse-starlette>=2.0",
  "kubernetes>=29.0",
  "httpx>=0.27",
]
mttd = [
  # MTTD layer v2 — rule + similarity tiers
  "httpx>=0.27",
  "pyyaml>=6.0",
]
war = [
  # War-room API v3 — Postgres state, FastAPI, MCP server
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sse-starlette>=2.0",
  "psycopg[binary]>=3.1",
  "kubernetes>=29.0",
  "httpx>=0.27",
]
client-agent = [
  # pipx-installable: vigil incident join/leave + Claude Code hooks + MCP
  "click>=8.1",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
all = [
  "vigil[rag,listen,importers,chat-api,mttd,war,client-agent,dev]",
]

[project.scripts]
vigil = "vigil.cli:main"

[project.urls]
Homepage = "https://github.com/JIUNG9/teammate"
Repository = "https://github.com/JIUNG9/teammate"
Issues = "https://github.com/JIUNG9/teammate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]

[tool.hatch.build.targets.wheel.shared-data]
"templates/team-brain-skeleton" = "share/vigil/team-brain-skeleton"

[tool.hatch.build.targets.sdist]
include = [
  "src/vigil",
  "templates",
  "hooks",
  "skills",
  ".claude-plugin",
  "docs",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
